# Real-Neural-Forge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
neural-forge/: README.md  pyproject.toml  run_training.sh
neural-forge/api/: app.py
neural-forge/api/routes/: health.py  predict.py
neural-forge/checkpoints/: best.pt
neural-forge/configs/: default.yaml  resnet_cifar10.yaml
neural-forge/docker/: Dockerfile  docker-compose.yml
neural-forge/src/neural_forge/: __init__.py
neural-forge/src/neural_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
neural-forge/src/neural_forge/api/: __init__.py
neural-forge/src/neural_forge/data/: __init__.py  dataset.py  loader.py  transforms.py
neural-forge/src/neural_forge/evaluation/: __init__.py  metrics.py  reporter.py
neural-forge/src/neural_forge/inference/: __init__.py  predictor.py
neural-forge/src/neural_forge/models/: __init__.py  base.py  cnn.py  mlp.py  registry.py
neural-forge/src/neural_forge/training/: __init__.py  optimizer.py  scheduler.py  trainer.py
neural-forge/src/neural_forge/utils/: __init__.py  checkpoint.py  config.py  logger.py  seed.py
neural-forge/tests/: __init__.py  test_data.py  test_evaluation.py  test_inference.py  test_models.py  test_training.py  test_utils.py
src/: __init__.py  api.py  model.py  train.py
tests/: __init__.py  test_api.py  test_model.py  test_train.py
